--- a/css/hover.css
+++ b/css/hover.css
@@ -3630,7 +3630,7 @@
 .hvr-icon-fade:hover .hvr-icon,
 .hvr-icon-fade:focus .hvr-icon,
 .hvr-icon-fade:active .hvr-icon {
-  color: #0F9E5E;
+  color: greenyellow;
 }
 
 /* Icon Float Away */
